--- a/styles.css
+++ b/styles.css
@@ -170,20 +170,20 @@ body {
 }
 
 #profile-block {
-    position: absolute;
+    position: fixed;
     top: 3rem;
     right: 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: max-content;
-    float: right;
-    margin-right: 1em;
+    max-width: 200px;
+    z-index: 1000;
 }
 
 #profile-pic {
-    width: 10%;
-    height: 10%;
+    width: clamp(80px, 10vw, 140px);
+    height: auto;
+    border-radius: 10%;
     border: 2px solid white;
     box-shadow: 0 0 20px white;
     animation: pulseGlow 10s ease-in-out infinite;
@@ -228,4 +228,8 @@ body {
 .tooltip:hover .tooltip-text {
     visibility: visible;
     opacity: 1;
+}
+
+rt {
+    font-size: 10px;
 }
