--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
     justify-content: center;
     align-items: center;
     line-height: 1.75;
-    font-size: 17.5px;
+    font-size: 22.5px;
     color: #ffffff;
 }
 
@@ -44,24 +44,28 @@ body {
     color: #ffffff;
 }
 
-.container h1 {
-    color: #e6e6fa;
-    margin: 2rem 0;
+.container h1,
+.container h2,
+.container h3 {
     text-shadow: 0 0 25px currentColor;
+    font-weight: bold;
+}
+
+.container h1 {
+    color: #ffffff;
+    margin: 2rem 0;
     line-height: 1.2;
 }
 
 .container h2 {
     color: #e6e6fa;
     margin: 2rem 0;
-    text-shadow: 0 0 25px currentColor;
     line-height: 1.3;
 }
 
 .container h3 {
     color: #d8bfd8;
     margin: 1.5rem 0 0.5rem 0;
-    text-shadow: 0 0 25px currentColor;
     line-height: 1.4;
 }
 
@@ -87,7 +91,7 @@ body {
 
 .container li {
     color: #e6e6fa;
-    margin: 0.4em 1em 0.4em 0;
+    margin: 2em 1em;
     line-height: 1.5;
 }
 
@@ -226,9 +230,8 @@ body {
     backdrop-filter: blur(4px);
     border: 2px solid rgb(168, 121, 255);
     box-shadow: inset 0 0 10px rgb(168, 121, 255);
-    padding: 8px 10px;
-    border-radius: 6px;
-    font-size: 12px;
+    padding: 16px 20px;
+    border-radius: 12px;
     white-space: nowrap;
     transition: opacity 0.2s ease;
     pointer-events: none;
@@ -285,7 +288,7 @@ rt {
 
 #google {
     background: linear-gradient(90deg, #ff0000, #ffe16a, #008a27, #1e00ff);
-    text-shadow: 0 0 10px #ffffff;
+    text-shadow: 0 0 5px #ffffff;
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
@@ -315,4 +318,8 @@ rt {
 
 #connections-table .strong {
     background-color: rgba(100, 105, 130, 0.75);
+}
+
+#dim {
+    opacity: 0.25;
 }
