--- a/styles.css
+++ b/styles.css
@@ -368,7 +368,6 @@ body {
 
     height: 200px;
 
-    display: flex;
     justify-content: center;
     align-items: center;
 
@@ -377,6 +376,8 @@ body {
 }
 
 #centered-end {
+    margin-top: auto;
+    margin-bottom: auto;
     text-align: center;
 }
 
