--- a/styles.css
+++ b/styles.css
@@ -47,13 +47,13 @@ body {
     color: #ffffff;
 }
 
-.container h1,
-.container h2,
-.container h3 {
+h1,
+h2,
+h3 {
     font-weight: bold;
 }
 
-.container h1 {
+h1 {
     color: #d4c1ff;
     text-shadow: 0 0 20px rgb(115, 60, 226);
     margin: 2rem 0;
@@ -61,22 +61,22 @@ body {
     line-height: 1.2;
 }
 
-.container h2 {
+h2 {
     color: #ab87ff;
     text-shadow: 0 0 20px rgb(115, 60, 226);
     margin: 2rem 0;
     line-height: 1.3;
 }
 
-.container h3 {
+h3 {
     color: #f5d0f5;
     text-shadow: 0 0 20px rgb(115, 60, 226);
     margin: 0.25rem 0 0.5rem 0;
     line-height: 1.4;
 }
 
-.container ul,
-.container ol {
+ul,
+ol {
     padding-left: 1.5em;
     margin: 1em 0;
     background-color: rgba(255, 255, 255, 0.04);
@@ -90,12 +90,14 @@ blockquote {
     padding-left: 1.5em;
     margin: 1em 0;
     background-color: rgba(255, 255, 255, 0.04);
+    border: 5px solid #aaaaaa20;
     border-radius: 10px;
     padding: 0.75em;
     color: #e6e6fa;
     transition:
         background-color 0.2s ease,
-        box-shadow 0.2s ease;
+        box-shadow 0.2s ease,
+        border 0.2s ease;
 }
 
 blockquote:hover {
@@ -104,14 +106,14 @@ blockquote:hover {
     box-shadow: 0 10px 25px #aaaaaa75;
 }
 
-.container li {
+li {
     color: #e6e6fa;
     margin: 2em 1em;
     line-height: 1.5;
 }
 
-.container ul ul,
-.container ol ol {
+ul ul,
+ol ol {
     list-style-type: circle;
     margin: 0.3em 0 0.3em 1em;
 }
@@ -121,15 +123,15 @@ blockquote:hover {
     margin-bottom: 1rem;
 }
 
-.container b,
-.container strong {
+b,
+strong {
     text-shadow: 0 0 25px currentColor;
     color: #e6e6fa;
     font-style: bold;
 }
 
-.container i,
-.container em {
+i,
+em {
     color: #ffe4ff;
     text-shadow: 0 0 20px rgb(115, 60, 226);
     font-style: italic;
@@ -143,18 +145,21 @@ a {
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
-    transition: transform 0.1s ease-out;
+    transition:
+        transform 0.1s ease-out,
+        text-shadow 0.2s ease;
 }
 
 a:hover {
     background: linear-gradient(120deg, #8f66ff, #6284ff);
+    text-shadow: 0 0 25px #7142ff;
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
-    transform: translateY(-2.5px);
+    transform: translateY(-2px);
 }
 
-.container code {
+code {
     background-color: rgb(35, 35, 55);
     color: rgb(170, 190, 220);
     padding: 0.1em 0.2em;
@@ -163,14 +168,13 @@ a:hover {
     white-space: normal;
 }
 
-.container p,
 .container li,
 .container span,
 .container div {
     color: #ffffff;
 }
 
-.container hr {
+hr {
     border-radius: 5px;
     height: 7.5px;
     background: rgba(255, 255, 255, 0.25);
@@ -194,25 +198,11 @@ a:hover {
     border-radius: 10%;
     border: 2px solid white;
     box-shadow: 0 0 20px white;
-    animation: pulseGlow 10s ease-in-out infinite;
     transition: box-shadow 0.2s ease;
 }
 
 #profile-pic:hover {
-    animation: none;
-    box-shadow: 0 10px 50px white;
-}
-
-@keyframes pulseGlow {
-    0% {
-        box-shadow: 0 0 20px white;
-    }
-    50% {
-        box-shadow: 0 0 40px white;
-    }
-    100% {
-        box-shadow: 0 0 20px white;
-    }
+    box-shadow: 0 25px 50px white;
 }
 
 #private {
@@ -271,7 +261,7 @@ a:hover {
     text-align: center;
     border: 2px solid rgb(100, 105, 130);
     border-collapse: collapse;
-    padding: 10px;
+    padding: 15px;
     transition: all 0.2s;
 }
 
@@ -292,7 +282,7 @@ a:hover {
 #connections-table td:hover,
 #connections-table th:hover,
 #connections-table .strong:hover {
-    box-shadow: inset 0 0 10px #ffffff50;
+    box-shadow: inset 0 0 10px #ffffff75;
 }
 
 #connections-table td:hover {
@@ -307,7 +297,7 @@ a:hover {
     background-color: rgba(100, 105, 130, 0.9);
 }
 
-#color {
+#favorite-color {
     background: linear-gradient(90deg, #4b9cff, #4d56ff, #6f36ff, #8c3aff);
     text-shadow: 0 0 20px #6f43ff;
     -webkit-background-clip: text;
@@ -364,7 +354,7 @@ a:hover {
     transform: translate(-50%, 0);
 }
 
-#end {
+#section-bottom {
     background: #240a7c;
     box-shadow:
         0 0 25px #5309ff,
@@ -384,17 +374,17 @@ a:hover {
     width: max(100%, 75rem);
 }
 
-#centered-end {
+#section-bottom-centered {
     margin-top: auto;
     margin-bottom: auto;
     text-align: center;
 }
 
-#centered-end p {
+#section-bottom-centered p {
     color: #c195ff;
 }
 
-#centered-end b {
+#section-bottom-centered b {
     color: #edc5ff;
 }
 
