Apply profile picture fix for all device sizes

--- a/styles.css
+++ b/styles.css
@@ -1,50 +1,59 @@
 * {
+    font-family: 'JetBrains Mono';
+
     margin: 0;
     padding: 0;
+
     box-sizing: border-box;
-    font-family: 'JetBrains Mono';
 }
 
 @font-face {
     font-family: 'JetBrains Mono';
+    font-style: normal;
+    font-display: swap;
+
     src:
         url('./assets/fonts/JetBrainsMono-Regular.woff2') format('woff2'),
         url('./assets/fonts/JetBrainsMono-Bold.woff2') format('woff2'),
         url('./assets/fonts/JetBrainsMono-BoldItalic.woff2') format('woff2'),
         url('./assets/fonts/JetBrainsMono-Italic.woff2') format('woff2');
-    font-style: normal;
-    font-display: swap;
 }
 
 body {
-    background: linear-gradient(135deg, #120536 0%, #380d96 100%);
-    min-height: 100svh;
-    min-height: 100dvh;
+    display: grid;
+    position: relative;
+
+    font-size: 22.5px;
+
     padding: 2rem;
     margin: auto;
+    min-height: 100svh;
+    min-height: 100dvh;
     line-height: 1.75;
-    font-size: 22.5px;
-    display: grid;
     place-items: center;
-    position: relative;
+
+    background: linear-gradient(135deg, #120536 0%, #380d96 100%);
     color: #ffffff;
 }
 
 .container {
-    width: max(95vw, 75rem);
-    background: rgba(15, 15, 35, 0.95);
-    backdrop-filter: blur(20px);
-    padding: 3rem;
-    border-radius: 20px;
-    border: 2px solid transparent;
-    background-clip: padding-box;
     position: relative;
+    width: max(95vw, 75rem);
+    padding: 3rem;
+
+    background: rgba(15, 15, 35, 0.95);
+    color: #ffffff;
+    border: 2px solid transparent;
+    border-radius: 20px;
     box-shadow:
         0 0 0 2px rgba(138, 43, 226, 0.6),
         0 0 0 4px rgba(138, 43, 226, 0.3),
         0 25px 50px rgba(0, 0, 0, 0.5),
         inset 0 1px 0 rgba(255, 255, 255, 0.1);
-    color: #ffffff;
+    backdrop-filter: blur(20px);
+
+    background-clip: padding-box;
+    overflow: hidden;
 }
 
 h1,
@@ -54,47 +63,52 @@ h3 {
 }
 
 h1 {
-    color: #d4c1ff;
-    text-shadow: 0 0 20px rgb(115, 60, 226);
     margin: 2rem 0;
     margin-bottom: 4rem;
     line-height: 1.2;
+
+    color: #d4c1ff;
+    text-shadow: 0 0 20px rgb(115, 60, 226);
 }
 
 h2 {
-    color: #ab87ff;
-    text-shadow: 0 0 20px rgb(115, 60, 226);
     margin: 2rem 0;
     line-height: 1.3;
+
+    color: #ab87ff;
+    text-shadow: 0 0 20px rgb(115, 60, 226);
 }
 
 h3 {
-    color: #f5d0f5;
-    text-shadow: 0 0 20px rgb(115, 60, 226);
     margin: 0.25rem 0 0.5rem 0;
     line-height: 1.4;
+
+    color: #f5d0f5;
+    text-shadow: 0 0 20px rgb(115, 60, 226);
 }
 
 ul,
 ol {
+    padding: 0.5em;
     padding-left: 1.5em;
     margin: 1em 0;
+
     background-color: rgba(255, 255, 255, 0.04);
-    border-radius: 0.2em;
-    padding: 0.5em;
     color: #e6e6fa;
+    border-radius: 0.2em;
     box-shadow: 0 0 20px rgba(255, 255, 255, 0.4);
 }
 
 blockquote {
+    padding: 0.75em;
     padding-left: 1.5em;
     margin: 1em 0;
+
     background-color: rgba(255, 255, 255, 0.04);
+    color: #e6e6fa;
     border: 5px solid #aaaaaa20;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.04);
-    padding: 0.75em;
-    color: #e6e6fa;
     transition:
         background-color 0.2s ease,
         box-shadow 0.2s ease,
@@ -126,26 +140,31 @@ ol ol {
 
 b,
 strong {
-    text-shadow: 0 0 25px currentColor;
-    color: #e6e6fa;
     font-style: bold;
+
+    color: #e6e6fa;
+    text-shadow: 0 0 25px currentColor;
 }
 
 i,
 em {
+    font-style: italic;
+
     color: #ffe4ff;
     text-shadow: 0 0 20px rgb(115, 60, 226);
-    font-style: italic;
 }
 
 a {
-    text-decoration: none;
     display: inline-block;
+
+    text-decoration: none;
     background: linear-gradient(120deg, #6f3aff, #385de2);
+    color: transparent;
     text-shadow: 0 5px 20px #7142ff;
+
     -webkit-background-clip: text;
     background-clip: text;
-    color: transparent;
+
     transition:
         transform 0.1s ease-out,
         text-shadow 0.2s ease;
@@ -153,18 +172,20 @@ a {
 
 a:hover {
     background: linear-gradient(120deg, #8f66ff, #6284ff);
+    color: transparent;
+
     -webkit-background-clip: text;
     background-clip: text;
-    color: transparent;
+
     transform: translateY(-2px);
 }
 
 code {
     background-color: rgb(35, 35, 55);
     color: rgb(170, 190, 220);
+    border: 1px solid rgb(181, 186, 255);
     padding: 0.1em 0.2em;
     border-radius: 6px;
-    border: 1px solid rgb(181, 186, 255);
     white-space: normal;
 }
 
@@ -181,15 +202,33 @@ hr {
     border: none;
 }
 
-#profile-block {
-    position: fixed;
-    top: 7rem;
-    right: 7rem;
+/* Thank you tactical02_ for the code block below! */
+
+#profile-wrapper {
     display: flex;
+    flex-direction: row-reverse;
+    gap: 2rem;
+    align-items: center;
+
+    blockquote {
+        width: 75vw;
+        height: max-content;
+    }
+}
+
+#profile-block {
+    display: flex;
+    position: unset;
+
     flex-direction: column;
     align-items: center;
-    max-width: 200px;
+
+    top: 7rem;
+    right: 7rem;
+    max-width: unset;
+    width: 20vw;
     z-index: 1000;
+    overflow: hidden;
 }
 
 #profile-pic {
@@ -202,7 +241,7 @@ hr {
 }
 
 #profile-pic:hover {
-    box-shadow: 0 25px 50px white;
+    box-shadow: 0 25px 25px #aaa;
 }
 
 #private {
@@ -215,59 +254,68 @@ hr {
 }
 
 #steam {
-    background: linear-gradient(90deg, #3b3b8b, #587af6, #e6fbff);
-    text-shadow: 0 0 10px #264acb;
+    background: linear-gradient(90deg, #6f6ffd, #7c98ff, #e6fbff);
+    color: transparent;
+    text-shadow: 0 0 10px #102a87;
+
     -webkit-background-clip: text;
     background-clip: text;
-    color: transparent;
 }
 
 #github {
     background: linear-gradient(90deg, #ffffff, #484848, #ffffff);
+    color: transparent;
     text-shadow: 0 0 10px #ffffff;
+
     -webkit-background-clip: text;
     background-clip: text;
-    color: transparent;
 }
 
 #reddit {
     background: linear-gradient(90deg, #ff6d3d, #ffffff);
+    color: transparent;
     text-shadow: 0 0 10px #ff5454;
+
     -webkit-background-clip: text;
     background-clip: text;
-    color: transparent;
 }
 
 #discord {
     background: linear-gradient(90deg, #7570ff, #6ac3ff, #6762ff);
+    color: transparent;
     text-shadow: 0 0 10px #300dbe;
+
     -webkit-background-clip: text;
     background-clip: text;
-    color: transparent;
 }
 
 #google {
     background: linear-gradient(90deg, #ff0000, #ffe16a, #008a27, #2592ff);
+    color: transparent;
     text-shadow: 0 0 10px #ffffff;
+
     -webkit-background-clip: text;
     background-clip: text;
-    color: transparent;
 }
 
 #connections-table,
 #connections-table th,
 #connections-table td {
     margin-left: 2em;
+    padding: 15px;
+
     text-align: center;
+
     border: 2px solid rgb(100, 105, 130);
     border-collapse: collapse;
-    padding: 15px;
+
     transition: all 0.2s;
 }
 
 #connections-table {
     margin-top: 1em;
     margin-bottom: 1em;
+
     box-shadow: 0 0 20px rgba(100, 105, 130, 0.5);
 }
 
@@ -299,10 +347,11 @@ hr {
 
 #favorite-color {
     background: linear-gradient(90deg, #4b9cff, #4d56ff, #6f36ff, #8c3aff);
+    color: transparent;
     text-shadow: 0 0 20px #6f43ff;
+
     -webkit-background-clip: text;
     background-clip: text;
-    color: transparent;
 }
 
 .dim {
@@ -316,46 +365,55 @@ hr {
 }
 
 .tooltip-label {
-    text-shadow: 0 0 10px rgb(80, 238, 255) !important;
     display: inline-block;
     position: relative;
-    vertical-align: 0em;
+
     font-weight: bold;
+
+    text-shadow: 0 0 10px rgb(80, 238, 255) !important;
+    vertical-align: 0em;
 }
 
 .tooltip-text {
+    font-size: 17.5px;
     user-select: none;
     display: inline-block;
+
     visibility: hidden;
     opacity: 0;
+
     position: absolute;
     bottom: 130%;
     left: 50%;
+    padding: 16px 20px;
     transform: translate(-50%, -25px);
-    background: rgba(50, 4, 111, 0.5);
     backdrop-filter: blur(4px);
+
+    background: rgba(50, 4, 111, 0.5);
     border: 2px solid rgb(168, 121, 255);
     box-shadow: inset 0 0 10px rgb(168, 121, 255);
-    font-size: 17.5px;
-    padding: 16px 20px;
     border-radius: 12px;
+
     white-space: nowrap;
     max-width: calc(100vw - 40px);
     overflow-wrap: break-word;
-    transition: all 0.5s ease-in;
     pointer-events: none;
     z-index: 1000;
+
+    transition: all 0.5s ease-in;
 }
 
 .tooltip:hover .tooltip-text {
-    transition: all 0.1s ease-in;
     visibility: visible;
     opacity: 1;
     transform: translate(-50%, 0);
+
+    transition: all 0.1s ease-in;
 }
 
 #section-bottom {
     background: #240a7c;
+
     box-shadow:
         0 0 25px #5309ff,
         inset 0 0 25px #9465ff;
@@ -372,11 +430,24 @@ hr {
 
     position: absolute;
     width: max(100%, 75rem);
+
+    transition:
+        box-shadow 0.2s ease,
+        background 0.2s ease;
+}
+
+#section-bottom:hover {
+    background: #2e0c9c;
+
+    box-shadow:
+        0 0 25px #996dff,
+        inset 0 0 50px #b697ff;
 }
 
 #section-bottom-centered {
     margin-top: auto;
     margin-bottom: auto;
+
     text-align: center;
 }
 
@@ -390,30 +461,36 @@ hr {
 
 #back-to-top {
     position: absolute;
+
+    font-size: 30px;
+
     right: 30px;
     margin: auto;
     padding: 0.75em 0.75em;
-    border-radius: 25px;
-    font-size: 30px;
+
+    background: linear-gradient(120deg, #18065f, #3e0edd);
     color: #ffffff;
     text-shadow: 0 0 10px #ffffff;
     box-shadow:
         inset 0 0 20px #3e0edd,
         0 50px 50px #3e0edd;
     border: 5px solid #6464e5;
-    background: linear-gradient(120deg, #18065f, #3e0edd);
+    border-radius: 25px;
+
     transition: all 0.2s ease;
 }
 
 #status-bar {
-    border: 2px solid #aaa;
     padding: 1em 2em;
     margin-top: 1em;
     margin-bottom: 1em;
+
+    background: linear-gradient(120deg, #222, #555);
+    border: 2px solid #aaa;
     box-shadow:
         0 0 20px #aaa,
         inset 0 0 20px #aaa;
-    background: linear-gradient(120deg, #222, #555);
+
     transition: all 0.2s ease;
 }
 
@@ -421,6 +498,14 @@ hr {
     box-shadow:
         0 20px 20px #aaa,
         inset 0 0 30px #ffffff;
+}
+
+#time-text {
+    user-select: none;
+}
+
+#secret-link {
+    display: none;
 }
 
 /* The Responsive Zone */
@@ -452,37 +537,5 @@ hr {
 
     #section-bottom {
         width: 1536px;
-    }
-}
-
-/* Thank you tactical02_ for the code block below! */
-
-@media (min-width: 1024px) and (max-width: 1536px) {
-    .profile-wrapper {
-        display: flex;
-        flex-direction: row-reverse;
-        gap: 2rem;
-        align-items: center;
-
-        #profile-block {
-            overflow: hidden;
-            position: unset;
-            max-width: unset;
-            width: 35%;
-        }
-
-        blockquote {
-            width: 65%;
-            height: max-content;
-        }
-    }
-
-    .container {
-        overflow: hidden;
-    }
-
-    .tooltip-text {
-        white-space: unset;
-        width: 250px;
     }
 }
